# codes

./: README  false_shell.c  mat_disc.c
MDC-MMC/: Unit1.cpp  Unit1.dfm  Unit1.h  Unit1.~cpp  Unit1.~dfm  Unit1.~h  mmcmdc.bpr  mmcmdc.cpp  mmcmdc.tds
false_shell/: TODO.txt  ascii.c  false_shell.c
htsite/: Makefile  README  doc.html  doc.txt  fields.c  format.c  hts.h  htsite  linhas.c  lista.c  main.c  misc.c  nada.html  nada.hts  ordem.c  processa.c  protos.h  refresh.c  structs.h  tags.c
jfind/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.status  configure  configure.in  libtool
jfind/autom4te.cache/: output.0  traces.0
jfind/src/: Makefile  Makefile.am  Makefile.in  main.c
jfind/src/.deps/: jfind-main.Po
mat_disc_html/: calcula.php  calcula.php.back  index.html
myrot13/: myrot13.c
myrot13/Debug/: makefile  objects.mk  sources.mk  subdir.mk
rssd/: RssDaemon.e3p  RssDaemon.e3t  daemon.py  rssd.py  rssparser.py
usleep/: Makefile  README  usleep.c
