## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

jfind_CFLAGS =\
	 -Wall\
	 -O1\
	 -g

bin_PROGRAMS = jfind

jfind_SOURCES = \
	main.c

jfind_LDFLAGS = 

jfind_LDADD = 

